<resources>
    <string name="app_name">TheMessanger</string>
    <string name="s_flash_dev">TheMessanger</string>
    <string name="s_login_account">Login to your account</string>
    <string name="s_login">Login</string>
    <string name="s_dont_signup">Don\'t have an account? SIGNUP</string>
    <string name="s_alreadyhave_account">ALREADY HAVE ACCOUNT</string>
    <string name="s_signup_account">Create a New Account</string>
    <string name="s_signup">Signup</string>
    <string name="s_submit">Submit</string>
    <string name="s_no_internet">No Internet Cannection</string>
    <string name="s_please_enter_name">please enter your name</string>
    <string name="s_please_enter_email">please enter  your mail</string>
    <string name="s_please_enter_valid_email">please enter valid mail</string>
    <string name="s_password_can_not_be_empty">password can not be empty</string>
    <string name="s_password_length">password length greater than 8 character</string>
    <string name="s_confirm_password_can_not_be_empty">conform password can not be empty</string>
    <string name="s_upload_succesfully">Upload Successfully</string>
    <string name="s_name_limit">name alwayas greater than two character</string>
    <string name="s_email_can_not_empty">email field is empty</string>
    <string name="s_password_can_not_empty">password field is empty</string>
    <string name="err_msg_email">please enter write email</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="s_forgot_password">Forgot Password</string>
    <string name="s_suggestion_forgot_password">A link will be send to your registered email, follow the steps to reset your password</string>
    <string name="s_confirm_password">Confirm Password</string>
    <string name="s_already_account_login">Already have an account? LOGIN</string>
    <string name="crash_toast_text">App Crashes</string>
    <string name="s_logout">Logout</string>
    <string name="s_users">All Users</string>
    <string name="all_user">All Users</string>
    <string name="s_account_settings">Account Settings</string>
    <string name="s_change_status">Change Status</string>
    <string name="s_change_image">Change Image</string>
    <string name="s_save_changes">Save Changes</string>
    <string name="s_account_status">Account Status</string>
    <string name="s_try_again">Try Again</string>
    <string name="s_add_images">Add Image</string>
    <string name="s_camera">Camera</string>
    <string name="s_gallery">Gallery</string>
    <string name="image_action">image action</string>
    <string name="s_successfully_uploaded">Profile image successfully updated</string>
    <string name="s_send_request">Send Friend Request</string>
    <string name="s_decline_request">Decline Request</string>
    <string name="Cancel" />
    <string name="s_reject_request">Reject</string>
    <string name="s_accept_request">Accept</string>
    <string name="s_cancel_request">Cancel</string>
    <string name="s_type_message">Type message here</string>
    <string name="s_create_group">Create new group</string>
    <string name="s_search">Search</string>
</resources>
