<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="150dp">


    <TextView
        android:id="@+id/tv_account_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:text="@string/s_account_settings"
        android:textColor="@color/color_black"/>

    <TextView
        android:id="@+id/tv_all_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:text="@string/s_users"
        android:textColor="@color/color_black"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:id="@+id/tv_logout"
        android:text="@string/s_logout"
        android:textColor="@color/color_black"/>
</LinearLayout>