<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.manjooralam.themessanger.activity.ForgotPasswordActivity"
    android:id="@+id/rootLayout">
   <include layout="@layout/layout_toolbar"
       android:id="@+id/toolbar"/>


    <TextView
        android:id="@+id/label_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/s_forgot_password"
        android:textColor="@color/color_black"
        android:textSize="@dimen/dp_20"
        android:layout_below="@id/toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/s_suggestion_forgot_password"
        android:textSize="@dimen/dp_16"
        android:gravity="center_horizontal"
        android:layout_below="@id/label_forgot_password"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/et_usermail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:textColorHint="@color/colorPrimaryDark"
           />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_submit"
        android:layout_marginTop="@dimen/dp_30"
        android:padding="@dimen/dp_12"
        android:gravity="center"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_15"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:layout_below="@+id/usernameWrapper"
        android:elevation="@dimen/dp_5"/>
</RelativeLayout>
