<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_20"
    android:layout_marginRight="@dimen/dp_20"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_dialog_background">

        <RelativeLayout
            android:id="@+id/rl_add_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dp_20"
                android:text="@string/s_add_images"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_extra_large" />

            <ImageView
                android:id="@+id/iv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:padding="@dimen/dp_10"
                android:src="@drawable/ic_location_permission_cross" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@id/rl_add_images"
            android:background="@color/colorPrimaryDark" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_add_images"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/lin_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/drawable_circle_gradient"
                    android:padding="@dimen/dp_5"
                    android:scaleType="center"
                    android:src="@drawable/ic_add_image_camera" />

                <TextView
                    android:id="@+id/tv_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/s_camera"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/txt_extra_large" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/lin_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/drawable_circle_gradient"
                    android:padding="@dimen/dp_5"
                    android:scaleType="center"
                    android:src="@drawable/ic_add_image_gallery" />

                <TextView
                    android:id="@+id/tv_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/s_gallery"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/txt_extra_large" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>