<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.manjooralam.themessanger.activity.LoginActivity">

    <include layout="@layout/layout_toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/s_login_account"
        android:textColor="@color/color_black"
        android:textSize="@dimen/dp_20" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usermailWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:textColorHint="@color/colorPrimaryDark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/colorPrimaryDark" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15">

        <ImageView
            android:id="@+id/off_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/userpasswordWrapper"
            android:padding="@dimen/dp_5"
            android:src="@drawable/ic_visibility_off_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@id/userpasswordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_toLeftOf="@id/off_visibility">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="Password"
                android:inputType="textWebPassword"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:textColorHint="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="@dimen/dp_12"
        android:text="@string/s_login"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:elevation="@dimen/dp_5"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:text="forgot password ?"
            android:textColor="@color/color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/dp_15"
            android:gravity="center"
            android:text="@string/s_dont_signup"
            android:textColor="@color/color_black"
            android:textSize="15sp" />
    </RelativeLayout>
</LinearLayout>
