<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.manjooralam.themessanger.activity.LoginActivity"
    android:orientation="vertical"
    android:id="@+id/llRootlayout">
    <include layout="@layout/layout_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/s_signup_account"
        android:layout_marginLeft="@dimen/dp_20"
        android:textColor="@color/color_black"
        android:textSize="@dimen/dp_20"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10" >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="User name"
            android:background="@null"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:textColorHint="@color/colorPrimaryDark"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_25">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usermail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15">

            <EditText
                android:id="@+id/et_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:background="@null"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:textColorHint="@color/colorPrimaryDark"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/colorPrimaryDark"/>
        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15">

        <ImageView
            android:id="@+id/iv_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/userpasswordWrapper"
            android:padding="@dimen/dp_5"
            android:src="@drawable/ic_visibility_off_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@id/userpasswordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_toLeftOf="@id/iv_visibility">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="Password"
                android:inputType="textWebPassword"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:textColorHint="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@color/colorPrimaryDark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15">

        <ImageView
            android:id="@+id/iv_visibility_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/userpasswordWrapper"
            android:padding="@dimen/dp_5"
            android:src="@drawable/ic_visibility_off_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@id/userpasswordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_toLeftOf="@id/iv_visibility_confirm">

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/s_confirm_password"
                android:inputType="textWebPassword"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:textColorHint="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@color/colorPrimaryDark" />
    <TextView
        android:id="@+id/signuptv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_signup"
        android:layout_marginTop="@dimen/dp_30"
        android:padding="@dimen/dp_12"
        android:gravity="center"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_15"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:elevation="@dimen/dp_5"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_15"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:text="@string/s_already_account_login"
            android:textColor="@color/color_black"
            android:textSize="15sp" />
    </FrameLayout>


</LinearLayout>
